Fixed fixed width problems on mobile

--- a/css/cardio.css
+++ b/css/cardio.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
 body {
 	font-family: 'Roboto', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 	overflow-x: hidden;
 	color: #2a3237;
 	-webkit-font-smoothing: antialiased;
@@ -85,6 +85,10 @@ h5 {
 
 h6 {
 	font-size: 16px;
+}
+
+.email {
+	 font-size: calc(14px + (20 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
 
 ul.white-list {
@@ -301,30 +305,6 @@ section {
 
 .section-padded {
 	padding: 140px 0 40px;
-}
-
-.cut-top {
-	content: ' ';
-	position: absolute;
-	z-index: 1;
-	top: -80px;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-top: 80px solid transparent;
-	border-right: 30px solid white;
-}
-
-.cut-bottom {
-	content: ' ';
-	position: absolute;
-	z-index: 1;
-	bottom: -80px;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-bottom: 80px solid transparent;
-	border-left: 30px solid white;
 }
 
 .intro-tables {
@@ -728,10 +708,6 @@ footer .open-blink:before {
 	opacity: 0.1;
 	border-radius: 50%;
 	background-color: #4caf50;
-}
-
-footer .opening-hours {
-	margin-top: 60px;
 }
 
 footer .bottom-footer {
